Fix border below search on Safari

--- a/app/pages/schedule/schedule.scss
+++ b/app/pages/schedule/schedule.scss
@@ -1,3 +1,7 @@
+ion-searchbar{
+  border:0px;
+}
+
 ion-toolbar{
     padding: 7px;
     padding-top: 0px;
@@ -6,7 +10,7 @@ ion-toolbar{
 }
 
 ion-header ion-toolbar .toolbar-background{
-  background-color: white;  
+  background-color: white;
 }
 
 .toolbar-background{
